syntax = "proto2";
option java_package = "io.jaspercloud.sdwan.core.proto";
option java_outer_classname = "SDWanProtos";

enum MsgType {
  HeartType = 1;
  RegReqType = 2;
  RegRespType = 3;
  NodeArpReqType = 4;
  NodeArpRespType = 5;
}

enum NodeType {
  SimpleType = 1;
  MeshType = 2;
}

message Message {
  required int64 reqId = 1;
  required MsgType type = 2;
  optional bytes data = 3;
}

message RegReq {
  required string hardwareAddress = 1;
  required string publicAddress = 2;
  required int32 publicPort = 3;
  required NodeType nodeType = 4;
  optional string cidr = 5;
}

message RegResp {
  required int32 code = 1;
  optional string vip = 2;
  optional string mask = 3;
}

message NodeArpReq {
  required string vip = 1;
}

message NodeArpResp {
  required int32 code = 1;
  optional string publicAddress = 2;
  optional int32 publicPort = 3;
}
